--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@ layout: default
 
 <div class="home">
 
-  {% if site.theme.header_text %}
-  <div class="call-out">{{ site.theme.header_text }}</div>
+  {% if site.theme_settings.header_text %}
+  <div class="call-out">{{ site.theme_settings.header_text }}</div>
   {% endif %}
 
   <div class="posts">
